--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/index.html
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crie seu evento</title>
@@ -13,15 +13,16 @@
 
 </head>
 <body>
-    <header>
-        <h1>
-            Crie e compartilhe seu evento.
-        </h1>
-        <p></p>
-    </header>
-    <form>
-        Aqui vem meus formularios
-    </form>
-    
+    <div class="page">
+        <header>
+            <h1>
+                Crie e compartilhe seu evento.
+            </h1>
+            <p>O primeiro passo é preencher esse formulário de inscrição</p>
+        </header>
+        <form>
+            Aqui vem meus formularios
+        </form>
+    </div>
 </body>
 </html>
