feat: formação do filmset

--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/index.html
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/index.html
@@ -21,7 +21,9 @@
             <p>O primeiro passo é preencher esse formulário de inscrição</p>
         </header>
         <form>
-            Aqui vem meus formularios
+            <fieldset>
+                <legend>Informações do evento</legend>
+            </fieldset>
         </form>
     </div>
 </body>
