--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/index.html
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/index.html
@@ -22,10 +22,24 @@
         </header>
         <form>
             <fieldset>
-                <legend>Informações do evento</legend>
-                <div class="input-wrapper">
-                    <label for="event-title" id="event-title">Título do evento <span>(mínimo 8 caracteres)</span> </label>
-                    <input type="text" id="event-title" />
+                <div class="fieldset-wrapper">
+                    <legend>Informações do evento</legend>
+                    <div class="input-wrapper">
+                        <label for="event-title" id="event-title">Título do evento <span>(mínimo 8 caracteres)</span> </label>
+                        <input type="text" id="event-title" />
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="event-link" id="event-link">Link do evento <span>(comece com https://)</span> </label>
+                        <input type="url" id="event-link" />
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="event-whatsapp" id="event-whatsapp">Whatsapp para contato<span>(somente números)</span> </label>
+                        <input type="number" id="event-whatsapp" />
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="event-info" id="event-info">Informações extras</label>
+                        <textarea id="event-info" ></textarea>
+                    </div>
                 </div>
             </fieldset>
         </form>
