--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/index.html
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte1/index.html
@@ -40,6 +40,14 @@
                         <label for="event-info" id="event-info">Informações extras</label>
                         <textarea id="event-info" ></textarea>
                     </div>
+                    <div class="input-wrapper">
+                        <label for="event-category" id="event-category">Categoria</label>
+                        <select id="event-category">
+                            <option value="live">Ao vivo</option>
+                            <option value="podcast">Podcast</option>
+                            <option value="mentorship">Mentoria</option>
+                        </select>
+                    </div>
                 </div>
             </fieldset>
         </form>
