feat: versao desktop html

--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte2_Responsividade/index.html
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte2_Responsividade/index.html
@@ -14,10 +14,12 @@
 </head>
 <body>
     <main>
-         <p>Nosso trabalho</p>
-         <h1>Fazemos projetos para mobile e Web</h1>
-         <p>Se você tem uma grande ideia inovadora e que vai transformar vidas, colorque seu dedo aqui que já vai fechar</p>
-         <a href="#">Saiba mais</a>
+        <div>
+            <p>Nosso trabalho</p>
+            <h1>Fazemos projetos para mobile e Web</h1>
+            <p>Se você tem uma grande ideia inovadora e que vai transformar vidas, colorque seu dedo aqui que já vai fechar</p>
+            <a href="#">Saiba mais</a>
+        </div>
          <ul>
             <li><span>1</span>Experiencia do usuario</li>
             <li><span>2</span>Experiencia do usuario</li>
