feat: Ajustando espaços e preenchimentos html

--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte3_ReforcResp/index.html
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte3_ReforcResp/index.html
@@ -20,9 +20,8 @@
         </div>
         <div class="ingredients">
             <h1>Modo de preparo</h1>
-            
+            <strong>Ingredientes:</strong>
             <ul>
-                <strong>Ingredientes:</strong>
                 <li>200g de biscoitos maisena</li>
                 <li>100g de manteiga</li>
                 <li>300g de cream cheese</li>
@@ -31,8 +30,8 @@
                 <li>1 colher de sopa de gelatina em pó incolor</li>
                 <li>1 xícara de morangos picados</li>
             </ul>
-            <ol>
-                <strong>Ingredientes</strong>
+            <strong>Modo de preparo</strong>
+            <ol> 
                 <li>Triture</li>
                 <li>Triture os biscoitos e misture com a manteiga derretida. Forre uma forma e leve à geladeira.</li>
                 <li>Bata o cream cheese, leite condensado e suco de limão. Adicione a gelatina dissolvida.</li>
