--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte4_Grid_Galaxies/Grid/index.html
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte4_Grid_Galaxies/Grid/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <main>
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        
+        <div>A</div>
+        <div>B</div>
+        <div>C</div>
+        <div>D</div>
+        <div>E</div>
+        <div>F</div>
+        <div>G</div>
     </main>
 </body>
 </html>
