feat: estilizando o card html

--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte4_Grid_Galaxies/index.html
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte4_Grid_Galaxies/index.html
@@ -9,8 +9,33 @@
 <body>
     <main>
         <div class="card">
-            <img src="" alt="">
+            <img src="./Assets/image 1.png" alt="IC 1101">
             <h2>IC 1101</h2>
+            <p>A IC 1101 é a maior galáxia do universo. A galáxia é elíptica à lenticular e aparece como coloração amarelo dourado. A galáxia mais brilhante está situada a mais de 1.04 bilhões de anos-luz da Terra. </p>
+        </div>
+        <div class="card">
+            <img src="./Assets/image2.png" alt="Phoenix Cluster">
+            <h2>Phoenix Cluster</h2>
+            <p>Phoenix Cluster é um dos grupos de galáxia mais sólidos no universo. Ela tem localização em torno de 5.7 bilhões de anos-luz da Terra. A galáxia elíptica é composta de matéria intra-grupo média e escura.</p>
+        </div>
+        <div class="card">
+            <img src="./Assets/image3.png" alt="NGC 262">
+            <h2>NGC 262</h2>
+            <p>A IC 1101 é a maior galáxia do universo. A galáxia é elíptica à lenticular e aparece como coloração amarelo dourado. A galáxia mais brilhante está situada a mais de 1.04 bilhões de anos-luz da Terra. </p>
+        </div>
+        <div class="card">
+            <img src="./Assets/image4.png" alt="NGC 4889">
+            <h2>NGC 4889</h2>
+            <p>A IC 1101 é a maior galáxia do universo. A galáxia é elíptica à lenticular e aparece como coloração amarelo dourado. A galáxia mais brilhante está situada a mais de 1.04 bilhões de anos-luz da Terra. </p>
+        </div>
+        <div class="card">
+            <img src="./Assets/image5.png" alt="NGC 4874">
+            <h2>NGC 4874</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae!</p>
+        </div>
+        <div class="card">
+            <img src="./Assets/image6.png" alt="A2261-BCG">
+            <h2>A2261-BCG</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae!</p>
         </div>
     </main>
