--- a/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte4_Grid_Galaxies/index.html
+++ b/01-fundamentos-JS/Explorer_Avan_HTML_CSS/Projeto_Parte4_Grid_Galaxies/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>
+            As maiores Galaxias
+        </h1>
+        <p>E curiosidades sobre elas</p>
+    </header>
     <main>
         <div class="card">
             <img src="./Assets/image 1.png" alt="IC 1101">
