feat: exercicio jogoAdivinhação

--- a/01-fundamentos-JS/Explorer_Int_Program_Log_JS/index.html
+++ b/01-fundamentos-JS/Explorer_Int_Program_Log_JS/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="listaCompras.js">
+    <script src="jogoAdivinhacao.js">
 
     </script>
 </body>
