feat: creation of a new page

--- a/01-fundamentos-JS/Explorer_JsAntesFramework/Projeto007/index.html
+++ b/01-fundamentos-JS/Explorer_JsAntesFramework/Projeto007/index.html
@@ -7,11 +7,16 @@
 </head>
 <body>
     <nav>
-        <a href="/">Home</a>
-        <a href="/about">Sobre</a>
-        <a href="/contato">Contato</a>
-        <a href="/404">404</a>
+        <a href="/" onclick="rout()">Home</a>
+        <a href="/about" onclick="rout()">Sobre</a>
+        <a href="/contato" onclick="rout()">Contato</a>
+        <a href="/404" onclick="rout()">404</a>
     </nav>
-    <!-- <div></div> -->
+    <div id="app"></div>
+    <script>
+        function route(event){
+
+        }
+    </script>
 </body>
 </html>
