--- a/01-fundamentos-JS/Explorer_JsAntesFramework/Projeto007/index.html
+++ b/01-fundamentos-JS/Explorer_JsAntesFramework/Projeto007/index.html
@@ -7,15 +7,24 @@
 </head>
 <body>
     <nav>
-        <a href="/" onclick="rout()">Home</a>
-        <a href="/about" onclick="rout()">Sobre</a>
-        <a href="/contato" onclick="rout()">Contato</a>
-        <a href="/404" onclick="rout()">404</a>
+        <a href="/" onclick="route()">Home</a>
+        <a href="/about" onclick="route()">Sobre</a>
+        <a href="/contact" onclick="route()">Contato</a>
+        <a href="/404" onclick="route()">404</a>
     </nav>
     <div id="app"></div>
     <script>
-        function route(event){
 
+        const routes = {
+            "/": "/pages/home.html",
+            "/about": "/pages/about.html",
+            "/contact": "/pages/contact.html",
+            404: "/pages/404.html",
+        }
+
+        function route(event){
+            event = event || window.event
+            event.preventDefault()
         }
     </script>
 </body>
