--- a/FullStack/JavaScriptAntesFrameWork/MetodosArray/index.html
+++ b/FullStack/JavaScriptAntesFrameWork/MetodosArray/index.html
@@ -6,6 +6,6 @@
     <title>Métodos de Array</title>
 </head>
 <body>
-    <script src="map.js"></script>
+    <script src="filter.js"></script>
 </body>
 </html>
