feat: exercicios map

--- a/FullStack/JavaScriptAntesFrameWork/MetodosArray/Exercicios/index.html
+++ b/FullStack/JavaScriptAntesFrameWork/MetodosArray/Exercicios/index.html
@@ -6,6 +6,6 @@
     <title>Exercicios Obj e Arrays</title>
 </head>
 <body>
-    <script src="exercicio76.js"></script>
+    <script src="exercicioMap1.js"></script>
 </body>
 </html>
