--- a/FullStack/JavaScriptAntesFrameWork/Imutabilidade/index.html
+++ b/FullStack/JavaScriptAntesFrameWork/Imutabilidade/index.html
@@ -6,6 +6,6 @@
     <title>Estudo JE</title>
 </head>
 <body>
-    <script src="deepFreezing.js"></script>
+    <script src="ManipulandoOI.js"></script>
 </body>
 </html>
