--- a/FullStack/JavaScriptAntesFrameWork/FuncoesAssincronas/index.html
+++ b/FullStack/JavaScriptAntesFrameWork/FuncoesAssincronas/index.html
@@ -6,6 +6,6 @@
     <title>Aulas de JavaScript</title>
 </head>
 <body>
-    <script type="module" src="setInterval.js"></script>
+    <script type="module" src="sync&Await.js"></script>
 </body>
 </html>
